# dz_minimal_controller

./: CMakeLists.txt  LICENSE  README.md  dz_minimal_controller.xml  package.xml
config/: controller_params.yaml  update_rate.yaml
include/dz_minimal_controller/: dz_minimal_controller.hpp  visibility_control.h
launch/: controller_load.launch.py
src/: dz_minimal_controller.cpp  dz_minimal_controller_generate_parameter_library_definition.yaml
test/: test_load_dz_minimal_controller.cpp  test_parameters.yaml
