<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dz_minimal_controller</name>
  <version>0.0.0</version>
  <description>A minimal ROS2 control controller using generate_parameter_library</description>
  <maintainer email="dsz@danzimmerman.com">dan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <depend>generate_parameter_library</depend>

  <!-- I'm going to skip linting for now
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  -->
  <!-- for ros2_control tests -->
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
